
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct sk_buff {scalar_t__ len; int protocol; struct net_device* dev; scalar_t__ data; } ;
struct TYPE_2__ {int rx_packets; int rx_bytes; int rx_errors; } ;
struct net_device {TYPE_1__ stats; } ;
struct frhdr {scalar_t__ control; int IP_NLPID; int NLPID; int pad; int PID; scalar_t__* OUI; } ;


 int ETH_P_IP ;
 scalar_t__ FRAD_I_UI ;





 int dev_kfree_skb (struct sk_buff*) ;
 int htons (int ) ;
 int kfree_skb (struct sk_buff*) ;
 int netdev_notice (struct net_device*,char*,...) ;
 int netif_rx (struct sk_buff*) ;
 int pskb_may_pull (struct sk_buff*,int) ;
 int skb_pull (struct sk_buff*,int) ;
 int skb_reset_mac_header (struct sk_buff*) ;

__attribute__((used)) static void dlci_receive(struct sk_buff *skb, struct net_device *dev)
{
 struct frhdr *hdr;
 int process, header;

 if (!pskb_may_pull(skb, sizeof(*hdr))) {
  netdev_notice(dev, "invalid data no header\n");
  dev->stats.rx_errors++;
  kfree_skb(skb);
  return;
 }

 hdr = (struct frhdr *) skb->data;
 process = 0;
 header = 0;
 skb->dev = dev;

 if (hdr->control != FRAD_I_UI)
 {
  netdev_notice(dev, "Invalid header flag 0x%02X\n",
         hdr->control);
  dev->stats.rx_errors++;
 }
 else
  switch (hdr->IP_NLPID)
  {
   case 130:
    if (hdr->NLPID != 128)
    {
     netdev_notice(dev, "Unsupported NLPID 0x%02X\n",
            hdr->NLPID);
     dev->stats.rx_errors++;
     break;
    }

    if (hdr->OUI[0] + hdr->OUI[1] + hdr->OUI[2] != 0)
    {
     netdev_notice(dev, "Unsupported organizationally unique identifier 0x%02X-%02X-%02X\n",
            hdr->OUI[0],
            hdr->OUI[1],
            hdr->OUI[2]);
     dev->stats.rx_errors++;
     break;
    }


    header = sizeof(struct frhdr);

    skb->protocol = hdr->PID;
    process = 1;
    break;

   case 131:
    header = sizeof(hdr->control) + sizeof(hdr->IP_NLPID);
    skb->protocol = htons(ETH_P_IP);
    process = 1;
    break;

   case 128:
   case 129:
   case 132:
    netdev_notice(dev, "Unsupported NLPID 0x%02X\n",
           hdr->pad);
    dev->stats.rx_errors++;
    break;

   default:
    netdev_notice(dev, "Invalid pad byte 0x%02X\n",
           hdr->pad);
    dev->stats.rx_errors++;
    break;
  }

 if (process)
 {

  skb_reset_mac_header(skb);
  skb_pull(skb, header);
  dev->stats.rx_bytes += skb->len;
  netif_rx(skb);
  dev->stats.rx_packets++;
 }
 else
  dev_kfree_skb(skb);
}
